--- a/index.html
+++ b/index.html
@@ -181,8 +181,10 @@
         </nav>
       </footer> -->
 
-      <div>
-        
+      <div class="box">
+        <h1 class="text-[64px]">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae harum odit voluptate, quidem voluptates voluptatum reprehenderit facere! At, voluptates cumque.</h1>
+     
+        <h1 class="text-[4rem]">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae harum odit voluptate, quidem voluptates voluptatum reprehenderit facere! At, voluptates cumque.</h1>
       </div>
 </body>
 
